--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,6 +10,7 @@
   ],
   "start_url": ".",
   "display": "standalone",
+  "background_color": "#ffffff",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  
 }
